# framenest

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  AI_WORKSPACE.md  AP.md  AP_ORCHESTRATOR.md  AP_WORKER.md  BOOT_ORCHESTRATOR.md  BOOT_WORKER.md  COVER_PIPELINE.md  DESKTOP.md  DEVELOPMENT.md  GALLERY.md  NEXT_ORCHESTRATOR.md  NEXT_WORKER.md  PRODUCT.md  README.md  ROADMAP.md  SECURITY.md  SERVER.md  SPEC.md  framenest  pyproject.toml
deploy/systemd/: framenest-ai-credential-nvidia-nim.conf  framenest-ai-credential-vercel-ai-gateway.conf  framenest.env.example  framenest.service
deploy/ubuntu/: README.md  fn-production-env-deploy  production_ai_deploy.py
docs/: ARCHITECTURE_FOUNDATION_EVIDENCE.md  ASGI_RUNTIME_EVIDENCE.md  BACKUP_AND_RECOVERY.md  FEDORA_SERVICE.md  NUC_HOST_BASELINE.md  UBUNTU_NUC_DEPLOYMENT.md
docs/adr/: 0001-supported-python-version.md  0002-python-environment-and-dependency-manager.md  0003-initial-server-api-framework.md  0004-repository-layout.md  0005-configuration-strategy.md  0006-macos-python-interpreter-provider.md  0007-settings-library.md  0008-asgi-runtime.md  0009-structured-logging-approach.md  0010-initial-persistence-foundation.md  0011-stable-domain-identities.md  0012-initial-device-registry.md  0013-initial-library-registry.md  0014-safe-library-scan-preview.md  0015-deterministic-local-media-analysis-preparation.md  0016-provider-neutral-media-suggestions-and-nvidia-nim-prototype.md  0017-initial-local-web-application-delivery.md  0018-local-media-analysis-preview-api.md  0019-vlm-image-derivatives-and-nvidia-instruct-mode.md  (+29 more)
tests/: automatic_analysis_lifecycle.test.js  gallery_gif_inline_toggle.test.js  gallery_search_tag_filters.test.js  gallery_still_image_render.test.js  upload_cockpit_async_ownership.test.js
(+308 files in other folders)
