[project]
name = "framenest"
version = "0.1.0"
description = "A local-first library for organizing video and animated media."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = ["pydantic-settings (>=2.14.2,<3.0.0)"]

[tool.poetry]
package-mode = true
packages = [
    { include = "framenest", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
